# bookshelf

./: .gitignore  GRAPHQL_GUIDE.md  graphql_queries.txt  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: author.puml  book.puml  building_blocks.puml  domain_events.puml  domain_exceptions.puml  domain_services.puml  repositories.puml  value_objects.puml
src/bookshelf/adapters/: app.py  bootstrap.py  seeder.py
src/bookshelf/adapters/outbound/: logging_event_publisher.py  system_clock.py  ulid_id_generator.py
src/bookshelf/application/: add_genre_to_book.py  add_review_to_book.py  change_author_biography.py  change_author_name.py  change_book_isbn.py  change_book_summary.py  change_book_title.py  create_author.py  create_book.py  delete_author.py  delete_book.py  exception.py  get_all_authors.py  get_all_books.py  get_author_by_id.py  get_book_by_id.py  get_books_by_author.py  read_models.py  remove_genre_from_book.py  remove_review_from_book.py
src/bookshelf/application/command/: add_genre_to_book.py  add_review_to_book.py  change_author_biography.py  change_author_name.py  change_book_isbn.py  change_book_summary.py  change_book_title.py  create_author.py  create_book.py  delete_author.py  delete_book.py  remove_genre_from_book.py  remove_review_from_book.py
src/bookshelf/application/query/: get_all_authors.py  get_all_books.py  get_author_by_id.py  get_book_by_id.py  get_books_by_author.py
src/bookshelf/domain/event/: domain_event.py  events.py
src/bookshelf/domain/exception/: exceptions.py
(+53 files in other folders)
